--- a/README
+++ b/README
@@ -3,3 +3,4 @@ Data has only one feature (hours studied) that would determine the function mode
 Model trained using tensorflow and keras optimizers
 Program prompts the user to enter number of hours and returns the predicted score
 Plots the optimized function along with the data points to visualize accuracy
+The repo contains two files, one contains just the source code and the other is a notebook
