Update Score Predictor (Supervised ML).ipynb

--- a/Score Predictor (Supervised ML).ipynb
+++ b/Score Predictor (Supervised ML).ipynb
@@ -6,13 +6,9 @@
    "source": [
     "# Usman Khalid\n",
     "\n",
-    "## Data Science & Business Analytics\n",
-    "#### The Sparks Foundation Internship\n",
-    "\n",
-    "### Task 1\n",
+    "## Machine Learning\n",
     "\n",
     "Predict the percentage of a student based on the no. of study hours.\n",
-    "What will be the predicted score if a student studies 9.25 hours?"
    ]
   },
   {
